[package]
name = "amateur-radio-cmap-core"
version = "1.0.0-alpha.1"
edition = "2024"

[lib]
name = "amateur_radio_cmap_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
approx = "0.5.1"
image = "0.25.9"
imageproc = "0.25.0"
libm = "0.2.15"
rayon = "1.11.0"
shapefile = "0.7.0"
wide = "1.0.2"
